This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2002-11-28 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/threading/PThreads.hh:
	Fix Mutex copy bug (#645270) as suggested by Robert Ballarin.
	
2002-11-20 Aaron Ingram <ai8@yahoo.com>
	* Priority.hh: added LOG4CPP_EXPORT to export Priority class from the 
        DLL (Win32 only)

2002-11-11 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* configure.in: corrected library version.
	
2002-11-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/AbortAppender.hh, src/AbortAppender.cpp: added.
	
2002-10-29 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.3.4b
	
	* include/log4cp/config-win32.h, src/PortabilityImpl.hh: added 
	workarounds for abs() and strftime() and localtime() not being
	defined in std:: on MSVC6. See bug report #630334.
	
2002-10-28 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.3.4.
	
	* tests/testPattern.cpp: added missing 'std::'.

	* src/StringUtil.hh, src/StringUtil.cpp: fixed signed-vs-unsigned
	comparison warning. Let both trim() implementations return
	unsigned int.
	
2002-10-27 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/OstringStream.hh, src/OstringStream.cpp: removed
	* src/StringUtil.hh, src/StringUtil.cpp: added vform() method.
	* PortabilityImpl.cpp: added. 

	* include/log4cpp/Appender.hh, include/log4cpp/HierachyMaintainer.hh,
	include/log4cpp/Log4cppCleanup.hh, src/Appender.cpp, 
	src/HierrachyMaintainer.cpp, src/log4cppCleanup.cpp:
	removed Log4cppCleanup, it was kinda broken anyway.

	* msvc6/log4cpp/log4cpp.dsp, msvc6/log4cppDLL/log4cppDLL.dsp,
	bcb5/log4cpp/log4cpp.bpf, bcb5/log4cpp/log4cpp.bpr, 
	bcb5/log4cpp/log4cpp.mak: added BasicConfigurator.

	* src/PatternLayout.cpp: define static constant strings in 
	TimeStampComponent outside class declaration.
	
2002-10-26 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.3.3.
	